# vim: set noexpandtab:

2012-11-19 Steve
	* Now setting default GRL path in SusyD3PDAna.Begin
	* Changed default met in NtMaker.cxx to STVF
	* Added more options to SusySkim
	* Tagging SusyCommon-00-00-47

2012-11-14 Steve
	* Updated SusyD3PDSkimmer
		* Saving D3PD meta data cutflow tree
		* Filtering on 3 signal leptons
	* Added new grid submission script: submit.py
		* Very handy script with all the beloved features
		* Should work for all SusyNt submission jobs
		* Might replace the bash submission scripts
		* Run with '-h' to see the available options
	* Minor updates for SusyMetValidation
	* Changed HforToolD3PD removal mode to DEFAULT
		* Takashi says this is recommended over ALL, because
		  it will take into account the availability of samples.
		  He also says difference is small right now.  
		  It probably doesn't affect us with the samples we use.

2012-11-13 Matt
	* Photons now saved by default (only tight ones, so size should not increase by much).
	* Updated method in selectSignalPhotons(), but not uncommented. Need update to MultiLep package, 
	  wait for Steve

2012-11-12 Steve
	* Adding methods to SusyD3PDAna for d3pd based analysis
		* getLepSF, getBTagSF (not done) 
		* I may want to add some equivalent to SusyNtTools, which will mostly just have 
		  kinematic functions such as Mll
	* Removing some obsolete SusyD3PDAna code which was commented out anyway
		* evtCheck, isHFORSample, dump, truth muon dump, getPileupWeight1fb
	* Updates for SusyMetValidation, for checking the 3L met bump
		* Implemented the VR selection, variable dumps, and histos
			* Using TriggerMatch package for multilepton trigger logic
		* Eventually I'd like to make the event selection more flexible, but this
		  should probably be done by adding event selection functionality in either
		  SusyD3PDAna or a new base class
	* Now using TruthJetD3PDObject for truth jets
	* Added SusyD3PDSkimmer for D3PD -> D3PD jobs

2012-10-27 Steve
	* Fixed usage of GetSignalElecSF